# shuiqi

./: .gitignore  Cargo.toml
shaders/: instance.wgsl  shader.wgsl  vertex.wgsl
src/: main.rs
src/config/: mod.rs
src/designer/: mod.rs  point.rs
src/graphics/: instance.rs  mod.rs  pipeline.rs
src/render/: mod.rs  wgpu.rs
